--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: kazimanzurrashid/aws-lambda-update-action@v2.0.3
       with:
-        zip-file: 'dist/lambda_function.zip'
+        zip-file: 'lambda_function.zip'
         lambda-name: 'cloudresume-function'
         AWS_REGION: 'us-east-1'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
